# glutamat

./: CMakeLists.txt  README.md
cmake/: FindClang.cmake
src/: CMakeLists.txt  FlagSingletonDefinitionsAstVisitor.cpp  FlagSingletonDefinitionsAstVisitor.h  FlagSingletonOwnUsageAstVisitor.cpp  FlagSingletonOwnUsageAstVisitor.h  FlagSingletonUsageAstVisitor.cpp  FlagSingletonUsageAstVisitor.h  GlutamatAstAction.cpp  GlutamatAstAction.h  GlutamatAstConsumer.cpp  GlutamatAstConsumer.h  NonStaticPrivateMethodsAstVisitor.cpp  NonStaticPrivateMethodsAstVisitor.h  SingletonAstVisitor.cpp  SingletonAstVisitor.h  main.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/NonStaticPrivateMethods/: FindDefinitions.cpp  FindUsages.cpp
test/SingletonDetect/: FindDefinitions.cpp  FindOwnUsages.cpp  FindUsages.cpp  IgnoreUsagesOutsideMainFile.h  Singleton.h
